[package]
name = "compend-plugin-eslint"
description = "A Compend plugin that provides support for ESLint rules and plugins."
version = "0.1.0"
edition = "2018"
license = "BlueOak-1.0.0"
readme = "README.md"
homepage = "https://compend.us"
repository = "https://github.com/compend/plugin-eslint"

[dependencies]
